# crucible

./: .gitignore  CHANGELOG.md  Cargo.toml  IMPLEMENTATION-ANALYSIS.md  IMPLEMENTATION-SUMMARY.md  LICENSE  README.md  REVIEW-SUMMARY.md  test-generation.sh
.claude/: instructions.md
.claude/commands/: crucible-architecture.md  crucible-init.md  crucible-review.md  crucible-sync.md
.claude/crucible/: config.json  context.json  hooks.md
.crucible/: manifest.json  rules.json
.crucible/modules/: claude.json  cli.json  config.json  context.json  discovery.json  error.json  generator.json  graph.json  lib.json  parser.json  rust_parser.json  sync.json  templates.json  types.json  validation.json  validator.json
.github/workflows/: ci.yml
crucible-cli/: Cargo.toml
crucible-cli/.claude/commands/: crucible-analyze.md  crucible-architecture.md  crucible-diff.md  crucible-module.md  crucible-validate.md
crucible-cli/docs/: QUICKSTART.md  README.md  common-mistakes.md  feedback.md  schema-reference.md  type-system.md
crucible-cli/docs/examples/full-stack-app/: README.md
crucible-cli/docs/examples/full-stack-app/.crucible/: manifest.json
crucible-cli/docs/examples/full-stack-app/.crucible/modules/: analyze-command.json  chapter.json  consistency-issue.json  constitution-command.json  core-traits.json  domain-events.json  file-storage.json  plan-view-ui.json  plot-thread.json  project-browser-ui.json  spec-editor-ui.json  spec-service.json  task-service.json  task.json  tasks-command.json  template-engine.json  timeline-event.json
crucible-cli/src/: main.rs
crucible-compliance/: CHANGELOG.md  Cargo.toml  LICENSE  LICENSE_FAQ.md  README.md
crucible-compliance/.crucible/: manifest.json
crucible-compliance/.crucible/modules/: error.json  framework.json  loader.json  reporter.json  types.json  validator.json
crucible-compliance/docs/: HIPAA-COMPLIANCE-GUIDE.md
crucible-compliance/docs/examples/healthcare-portal/: README.md
crucible-compliance/docs/examples/healthcare-portal/.crucible/: manifest.json
crucible-compliance/docs/examples/healthcare-portal/.crucible/modules/: appointments.json  audit.json  auth.json  medical-records.json  patient.json
crucible-compliance/frameworks/: hipaa.json  pci-dss.json  soc2.json
crucible-compliance/src/: error.rs  framework.rs  lib.rs  loader.rs  main.rs  reporter.rs  validator.rs
crucible-compliance/tests/: healthcare_integration.rs  hipaa_rules_test.rs
crucible-core/: Cargo.toml
crucible-core/.claude/: CRUCIBLE.md
crucible-core/.claude/crucible/: claude.json  context.json
crucible-core/.crucible/: manifest.json  rules.json
crucible-core/.crucible/modules/: cache.json  config.json  context.json  error.json  generator.json  parser.json  performance.json  primitives.json  type-system.json  types.json  validator.json
crucible-core/src/: cache.rs  error.rs  generator.rs  graph.rs  lib.rs  parser.rs  type_system.rs  types.rs  validator.rs
crucible-core/src/claude/: config.rs  context.rs  discovery.rs  mod.rs  rust_parser.rs  sync.rs  templates.rs  validation.rs
crucible-core/src/templates/: config.json.hbs  hooks.md.hbs  instructions.md.hbs
crucible-core/tests/: benchmark_performance.rs  call_validation_test.rs  integration_test.rs  performance_test.rs  type_system_test.rs  validate_architecture.rs
docs/: IMPLEMENTATION_ROADMAP.md  PHASE_3_VALUE_ASSESSMENT.md  PHASE_6_VALUE_ASSESSMENT.md  README.md  SLASH_COMMANDS_SUMMARY.md  cli-reference.md  schema-reference.md
docs-internal/: CLAUDE_CODE_INTEGRATION.md  IMPLEMENTATION_ROADMAP.md  PHASE_1_VALUE_ASSESSMENT.md  PHASE_2_VALUE_ASSESSMENT.md  PHASE_4_VALUE_ASSESSMENT.md  PHASE_5_VALUE_ASSESSMENT.md  RELEASE_PROCESS.md  SLASH_COMMANDS_IMPLEMENTATION_PLAN.md  TODO.md  TYPESCRIPT_TYPE_SYSTEM.md  type-system-enhancement-architecture.md
docs/examples/full-stack-app/: README.md
docs/examples/full-stack-app/.crucible/: rules.json
docs/examples/full-stack-app/.crucible/modules/: analysis-service.json  character.json  check-command.json  clarify-command.json  claude-client.json  consistency-checker.json  constitution-service.json  constitution-wizard-ui.json  git-repository.json  init-command.json  pacing-analyzer.json  plan-command.json  plan-service.json  project-config.json  project-service.json  prompt-manager.json  spec-info.json  specify-command.json
scripts/: README.md  pre-push.sh
spec/: BRANDING.md  CLAUDE-CODE-INSTRUCTIONS.md  DUAL-LICENSE-SUMMARY.md  GETTING-STARTED.md  INDEX.md  LICENSE-QUICK-REF.md  LICENSING.md  PROJECT-STRUCTURE.md  README.md  REBRAND.md  SPEC.md  schema.json
spec/examples/: README.md
spec/examples/calculator-app/: manifest.json  rules.json
spec/examples/calculator-app/modules/: calculator.json  history.json  math.json
spec/examples/simple-app/: manifest.json  rules.json
spec/examples/simple-app/modules/: greeter.json  logger.json
spec/examples/todo-app/: manifest.json  rules.json
spec/examples/todo-app/modules/: api.json  auth.json  repository.json  todo-events.json
temp-docs/: IMPLEMENTATION-GUIDE.md  example-manifest.json  example-module-todo.json  setup-crucible.sh
