[workspace]
members = [
    "crucible-core",
    "crucible-cli",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["Crucible Contributors"]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/anvanster/crucible"
homepage = "https://github.com/anvanster/crucible"
documentation = "https://github.com/anvanster/crucible/blob/main/README.md"
description = "Architecture-first development framework for AI-native applications"
keywords = ["architecture", "validation", "ai", "claude-code", "software-design"]
categories = ["development-tools", "command-line-utilities"]
readme = "README.md"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
petgraph = "0.6"
semver = "1.0"
colored = "2.0"
handlebars = "5.0"
walkdir = "2.0"
ignore = "0.4"
