[package]
name = "crucible-cli"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "crucible"
path = "src/main.rs"

[dependencies]
crucible-core = { path = "../crucible-core" }
clap.workspace = true
anyhow.workspace = true
colored.workspace = true
