[package]
name = "crucible-cli"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true
include = [
    "src/**/*",
    "Cargo.toml",
    ".claude/commands/*.md",
    "docs/README.md",
    "docs/QUICKSTART.md",
    "docs/schema-reference.md",
    "docs/type-system.md",
    "docs/common-mistakes.md",
    "docs/cli-reference.md",
    "docs/examples/**/*",
]

[[bin]]
name = "crucible"
path = "src/main.rs"

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-{ target }{ archive-suffix }"
bin-dir = "{ bin }{ binary-ext }"
pkg-fmt = "tgz"

[dependencies]
crucible-core = { version = "0.1.7", path = "../crucible-core" }
clap.workspace = true
anyhow.workspace = true
colored.workspace = true
