[package]
name = "crucible-core"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
petgraph.workspace = true
semver.workspace = true
handlebars.workspace = true
walkdir.workspace = true
ignore.workspace = true

[dev-dependencies]
tempfile = "3.0"
