[package]
name = "crucible-core"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "Core library for Crucible architecture validation framework"
keywords.workspace = true
categories.workspace = true
readme.workspace = true
include = [
    "src/**/*",
    "Cargo.toml",
]

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
petgraph.workspace = true
semver.workspace = true
handlebars.workspace = true
walkdir.workspace = true
ignore.workspace = true
dirs = "5.0"

[dev-dependencies]
tempfile = "3.0"
